<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mc_mdl_tomasys</name>
  <version>0.1.0</version>
  <description>Contain the Metacontrol Metamodel</description>
  <author>Carlos Hernandez Corbato (TU Delft Robotics Institute)</author>
  <maintainer email="c.h.corbato@tudelft.nl">Carlos Hernandez Corbato</maintainer>

  <license>Apache</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
